@@ -48,3 +48,4 @@ examples/homepage-logo.pl
 examples/windy.pl
 examples/prep4gif.pl
 examples/ditherize.pl
+examples/view3d.pl
